# TWEANNsFromScratch

./: CMakeLists.txt  CMakePresets.json  Compute.cmake
Compute/: .gitignore
Compute/SYCL/: CMakeLists.txt  README.md
Compute/SYCL-from-scratch/: CMakeLists.txt  CMakePresets.json  SYCLBackendConfig.cmake
Compute/SYCL-from-scratch/src/Baseline/: CMakeLists.txt  main.cpp  noise.cpp  noise.hpp
Compute/SYCL-from-scratch/src/CellularAutomataTest/: CMakeLists.txt  cell.cpp  cell.hpp  main.cpp
Compute/SYCL-from-scratch/src/include/: doublebuf.hpp  mat.hpp  sycl_util.hpp
Compute/SYCL/CellularAutomataTest/: CMakeLists.txt
Compute/SYCL/PerlinNoise/: CMakeLists.txt  main.cpp
Compute/SYCL/src/Baseline/: CMakeLists.txt  main.cpp  noise.cpp  noise.hpp
Compute/SYCL/src/include/: util.hpp
Notes/: Game Ideas.md  Installation.md  Proposal.md  Which tool for compute.md
Notes/.obsidian/: app.json
Notes/NEAT/: Overview.md
Recreation/: CMakeLists.txt
Recreation/src/: main.cpp
